sample/msvc/error/c2053.cpp
// C2053.c
int main() {
   char array[] = L"Rika";   // C2053
}
